--- a/universe_configuration.ini
+++ b/universe_configuration.ini
@@ -1,9 +1,5 @@
 [DEFAULT]
 
-[UNIVERSES]
-ONE = ['ADBE', 'CRM']
-TWO = ['FSLY', 'DOMO']
-
-[DATA]
-Volume = True
+[UNIVERSE_ONE]
+Tickers = ['ADBE', 'CRM']
 CurrentQuarter = ['CQ42019', 'CQ12020', 'CQ22020']
