--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,23 @@ services:
     build:
       dockerfile: ui/Dockerfile.ui
     working_dir: /app
+    volumes:
+      - ./ui/src:/app/src  # Mount your local repo dir to /app dir
+      - ./ui/public:/app/public  # Mount your local repo dir to /app dir
+      - ./ui/node_modules:/app/node_modules  # Mount your local repo dir to /app dir
     ports:
-     - "3000:80"
-    command: ["nginx", "-g", "daemon off;"]
+     - "3000:3000"
+    environment:
+      - WDS_SOCKET_HOST=127.0.0.1 
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+    # command: ["nginx", "-g", "daemon off;"]
+    command: ["npm", "start"]
+    depends_on:
+      - apiserver
+    networks:
+      - local
   apiserver:
     image: python:3.10
     build:
@@ -23,6 +37,8 @@ services:
       - PGDATABASE=phil
     depends_on:
       - db
+    networks:
+      - local
   db:
     image: postgres
     restart: always
@@ -34,6 +50,8 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data 
+    networks:
+      - local
   ubuntu:
     build:
       dockerfile: Dockerfile.ubuntu
@@ -45,6 +63,11 @@ services:
       - PGDATABASE=phil
     working_dir: /app
     command: ["sleep", "infinity"]
+    networks:
+      - local
     # command: ["/bin/bash", "source sqlAlchemy/bin/activate; python3 /app/create_database.py"]
 volumes:
   pgdata:
+networks:
+  local:
+    driver: bridge  # Using bridge network
