--- a/api_server/Dockerfile.api
+++ b/api_server/Dockerfile.api
@@ -2,6 +2,10 @@ FROM python:3.10
 
 WORKDIR /app
 
-COPY ../ /app
+COPY ../api_server /app/api_server
+COPY ../models /app/models
+COPY ../create_database.py /app
+COPY ../src /app/src`
+COPY ../requirements.txt /app
 
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
