move src directory inside api_server and add UI stuff

--- a/api_server/Dockerfile.api
+++ b/api_server/Dockerfile.api
@@ -1,11 +1,30 @@
+# Use the official Python 3.10 image
 FROM python:3.10
 
+# Set environment variables
+ENV PGUSER=admin
+ENV PGPASSWORD=password
+ENV PGDATABASE=phil
+
+# Set working directory
 WORKDIR /app
 
-COPY ../api_server /app/api_server
-COPY ../models /app/models
-COPY ../create_database.py /app
-COPY ../src /app/src`
-COPY ../requirements.txt /app
+# Install virtualenv
+RUN apt-get update && apt-get install -y python3-venv
 
-RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
+# Create virtual environment
+RUN python3 -m venv /app/sqlAlchemy
+
+# Install dependencies in virtual environment
+COPY api_server/requirements.txt /app
+RUN /bin/bash -c "source /app/sqlAlchemy/bin/activate && pip install -r /app/requirements.txt"
+
+# Copy the rest of the application
+COPY /api_server /app/api_server
+
+# Expose the port
+EXPOSE 8000
+
+# Set the entrypoint
+ENTRYPOINT ["/bin/bash", "-c", "source /app/sqlAlchemy/bin/activate && uvicorn api_server.main:app --host 0.0.0.0 --port 8000 --reload"]
+
