new Cursor adds

--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,17 +1,20 @@
 psycopg2
-sqlalchemy
-fastapi
-pandas
+sqlalchemy>=1.4.0
+fastapi>=0.68.0
+pandas>=1.3.0
 numpy
 openpyxl
 xlrd
 databases[postgresql]
-uvicorn
+uvicorn>=0.15.0
 pydantic
 yfinance
 python-multipart
 yahooquery
 matplotlib
-python-dateutil
-APScheduler
-pytz
+python-dateutil>=2.8.2
+APScheduler>=3.9.1
+pytz>=2021.3
+requests>=2.26.0
+beautifulsoup4>=4.9.3
+lxml>=4.9.0
