--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -13,7 +13,7 @@ python-multipart
 yahooquery
 matplotlib
 python-dateutil>=2.8.2
-APScheduler>=3.9.1
+apscheduler>=3.9.1
 pytz>=2021.3
 requests>=2.26.0
 beautifulsoup4>=4.9.3
